--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
  flex: 1;
  border: 1px solid (0,0,0,0);
  margin: 15px;
+ margin-top: -200px;
 }
 
 img {
@@ -43,4 +44,22 @@ h2, h3{
 
 a{
   color: gray;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+li a {
+  display: block;
+    color: white;
+  padding: 8px 16px;
+  text-decoration: none;
 }
